testsuite/tests/properties/invalid_enum_nodes/bad_alt.lkt
import common

class Example: FooNode implements TokenNode {
    @exported fun p(): Int = match node.parent {
        case _: OpKind.Baz => 1
        case _ => 0
    }
}
